organized the file structure for this project

--- a/PSP_Intervals/MFDFA_PSP_Interval6.ipynb
+++ b/PSP_Intervals/MFDFA_PSP_Interval6.ipynb
@@ -19,6 +19,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from pytplot import tplot\n",
+    "import sys\n",
+    "sys.path.append('../../Solar_Wind_MFDFA/src')\n",
     "import MFDFAlib\n",
     "import statsmodels.api as sm\n",
     "from statsmodels.graphics.tsaplots import plot_pacf\n",
@@ -34,18 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "17-Jun-25 00:07:16: Downloading remote index: https://spdf.gsfc.nasa.gov/pub/data/psp/fields/l2/mag_rtn/2021/\n",
-      "17-Jun-25 00:07:16: File is current: psp_data/fields/l2/mag_rtn/2021/psp_fld_l2_mag_rtn_2021080918_v02.cdf\n",
-      "17-Jun-25 00:07:20: Downloading remote index: https://spdf.gsfc.nasa.gov/pub/data/psp/fields/l2/mag_rtn/2021/\n",
-      "17-Jun-25 00:07:20: File is current: psp_data/fields/l2/mag_rtn/2021/psp_fld_l2_mag_rtn_2021080918_v02.cdf\n",
-      "17-Jun-25 00:07:21: /home/scoscia/.local/lib/python3.12/site-packages/IPython/core/pylabtools.py:77: DeprecationWarning: backend2gui is deprecated since IPython 8.24, backends are managed in matplotlib and can be externally registered.\n",
+      "17-Jun-25 14:47:56: Downloading remote index: https://spdf.gsfc.nasa.gov/pub/data/psp/fields/l2/mag_rtn/2021/\n",
+      "17-Jun-25 14:47:57: File is current: psp_data/fields/l2/mag_rtn/2021/psp_fld_l2_mag_rtn_2021080918_v02.cdf\n",
+      "17-Jun-25 14:48:00: Downloading remote index: https://spdf.gsfc.nasa.gov/pub/data/psp/fields/l2/mag_rtn/2021/\n",
+      "17-Jun-25 14:48:01: File is current: psp_data/fields/l2/mag_rtn/2021/psp_fld_l2_mag_rtn_2021080918_v02.cdf\n",
+      "17-Jun-25 14:48:01: /home/scoscia/.local/lib/python3.12/site-packages/IPython/core/pylabtools.py:77: DeprecationWarning: backend2gui is deprecated since IPython 8.24, backends are managed in matplotlib and can be externally registered.\n",
       "  warnings.warn(\n",
       "\n"
      ]
@@ -64,10 +66,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "17-Jun-25 00:07:21: Downloading remote index: https://spdf.gsfc.nasa.gov/pub/data/psp/fields/l2/mag_rtn/2021/\n",
-      "17-Jun-25 00:07:22: File is current: psp_data/fields/l2/mag_rtn/2021/psp_fld_l2_mag_rtn_2021080918_v02.cdf\n",
-      "17-Jun-25 00:07:25: Downloading remote index: https://spdf.gsfc.nasa.gov/pub/data/psp/fields/l2/mag_rtn/2021/\n",
-      "17-Jun-25 00:07:26: File is current: psp_data/fields/l2/mag_rtn/2021/psp_fld_l2_mag_rtn_2021080918_v02.cdf\n"
+      "17-Jun-25 14:48:01: Downloading remote index: https://spdf.gsfc.nasa.gov/pub/data/psp/fields/l2/mag_rtn/2021/\n",
+      "17-Jun-25 14:48:02: File is current: psp_data/fields/l2/mag_rtn/2021/psp_fld_l2_mag_rtn_2021080918_v02.cdf\n",
+      "17-Jun-25 14:48:05: Downloading remote index: https://spdf.gsfc.nasa.gov/pub/data/psp/fields/l2/mag_rtn/2021/\n",
+      "17-Jun-25 14:48:06: File is current: psp_data/fields/l2/mag_rtn/2021/psp_fld_l2_mag_rtn_2021080918_v02.cdf\n"
      ]
     },
     {
