--- a/PSP_Intervals/MFDFA_PSP_Interval2.ipynb
+++ b/PSP_Intervals/MFDFA_PSP_Interval2.ipynb
@@ -19,6 +19,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from pytplot import tplot\n",
+    "import sys\n",
+    "sys.path.append('../../Solar_Wind_MFDFA/src')\n",
     "import MFDFAlib\n",
     "import statsmodels.api as sm\n",
     "from statsmodels.graphics.tsaplots import plot_pacf\n",
